[package]
name = "macroquad-virtual-joystick"
version = "0.2.0"
authors = ["akida31 <akida3@protonmail.com>"]
edition = "2018"
description = "simple joystick for macroquad games"
homepage = "https://github.com/Akida31/macroquad-virtual-joystick"
repository = "https://github.com/Akida31/macroquad-virtual-joystick"
license = "MIT"
readme = "README.md"
categories = ["game-development"]
keywords = ["gamedev", "portable", "joystick", "macroquad"]

[dependencies]
macroquad = "0.3"
